# layer-profitability-checker

./: .gitignore  README.md  config_example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test-requirements.txt
.github/workflows/: lint.yml
src/: __init__.py  apr.py  checker.py  config.py  csv_export.py  display_helpers.py  main.py  rewards.py  scenarios.py
src/chain_data/: abci_queries.py  block_data.py  node_data.py  rpc_client.py  tx_data.py
src/module_data/: globalfee.py  mint.py  reporter.py  selectors.py  staking.py  tipping.py
tests/: __init__.py  conftest.py  test_apr.py  test_mint.py  test_rpc_client.py  test_scenarios.py
